--- a/index.html
+++ b/index.html
@@ -48,7 +48,28 @@
   
 <a href="https://www.tshirthell.com/" target="_blank"> <span class="dot" "></span></a>
 
+<a href="https://www.groupon.com/" target="_blank"> <span class="dot" "></span></a>
   
+<a href="https://www.usatoday.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="https://www.cnn.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="https://www.cnn.com/travel" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="https://www.urbandictionary.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="https://www.espn.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="https://www.theepochtimes.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="http://endless.horse/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="http://eelslap.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="https://news.google.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="https://www.weather.com/" target="_blank"> <span class="dot" "></span></a>
+   
 </div>
 
 </body>
