--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
 
 <div style="text-align:center">
+  
+<img src="Untitled-1.png" alt="grarfy plain text header">
 
 <a href="https://www.nytimes.com" target="_blank"> <span class="dot" "></span></a>
  
