--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 <div style="text-align:center">
   
 <img src="Untitled-1.png" alt="grarfy plain text header">
-
+  
+</div>
+  
+<div style="text-align:center">
+  
 <a href="https://www.nytimes.com" target="_blank"> <span class="dot" "></span></a>
  
 <a href="http://www.bostonglobe.com/business" target="_blank"> <span class="dot" "></span></a>
