--- a/index.html
+++ b/index.html
@@ -73,8 +73,46 @@
 <a href="http://eelslap.com/" target="_blank"> <span class="dot" "></span></a>
   
 <a href="https://news.google.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.latimes.com/business" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.latimes.com/business/technology" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.usatoday.com/entertainment/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.tmz.com/" target="_blank"> <span class="dot" "></span></a>
   
-<a href="https://www.weather.com/" target="_blank"> <span class="dot" "></span></a>
+<a href="https://pagesix.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.nationalenquirer.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://bleacherreport.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.theonion.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="https://clickhole.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.instagram.com/shitheadsteve/?hl=en" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.instagram.com/trashcanpaul/?hl=en" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://genius.com/" target="_blank"> <span class="dot" "></span></a>
+  
+<a href="" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.delish.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.thekitchn.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.shitbrix.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.cnn.com/politics" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.barstoolsports.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.goodhousekeeping.com/" target="_blank"> <span class="dot" "></span></a>
+
+<a href="https://www.rd.com/" target="_blank"> <span class="dot" "></span></a>
    
 </div>
 
